force-app/main/default/objects/Customer__c/Customer__c.object-meta.xml
<CustomObject>
    <label>Customer</label>
    <nameField>
        <displayFormat>ID-{00000}</displayFormat>
        <label>Customer ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>