force-app/main/default/objects/Customer__c/fields/Customer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notes__c</fullName>
    <description>Any notes pertaining to the customer.</description>
    <label>Customer Notes</label>
    <type>TextArea</type>
</CustomField>