force-app/main/default/objects/Customer__c/fields/Customer_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone_Number__c</fullName>
    <description>The customer&apos;s phone number.</description>
    <label>Customer Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>