force-app/main/default/objects/Customer__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>First Name</label>
    <length>16</length>
    <required>true</required>
    <type>Text</type>
</CustomField>